scripts/nullaway/annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8.txt
../annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/Drunkard.java:86: error: [NullAway] assigning @Nullable expression to @NonNull field
        position = nextPosition;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/GameObject.java:55: error: [NullAway] @NonNull field position not initialized
    protected Position position;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/ActiveGameObject.java:65: error: [NullAway] assigning @Nullable expression to @NonNull field
        position = null;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:51: error: [NullAway] dereferenced expression pos is @Nullable
        field[pos.getRow()][pos.getColumn()] = obj;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/Position.java:74: error: [NullAway] dereferenced expression pos is @Nullable
        return (row == pos.row && column == pos.column);
                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/PathHelper.java:39: error: [NullAway] dereferenced expression pos is @Nullable
        while (!pos.equals(from)) {
                   ^
    (see http://t.uber.com/nullaway )
6 errors
